- Fixed alignment on panel option dropdown menus.

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -168,6 +168,12 @@ a.warning {
 .dropdown-menu {
   .box-shadow(@shadow-overlay);
 
+  // Added to Support Right Aligned Dropdowns
+  .dropdown-right & {
+    right: 0;
+    left: auto;
+  }
+
   .dropdown-item-danger {
     color: @brand-danger;
     &:hover {
